provarAnt/00D190000000ZY2EAM/objects/Pricing_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Destination_API__c</fullName>
        <label>Destination API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Type__c</fullName>
        <label>Destination Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_API__c</fullName>
        <label>Source API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pricing Mapping</label>
    <nameField>
        <label>Pricing Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>